# aws-sam-tutorial

./: .gitignore  README.md  pyproject.toml  template.yaml
api/: auth.py  constants.py  handler.py  model.py  requirements.txt
