[tool.poetry]
name = "aws-sam-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "aws_sam_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
mangum = "^0.17.0"
fastapi = "^0.109.2"
boto3 = "^1.34.34"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
boto3-stubs = {extras = ["cognito-idp"], version = "^1.34.35"}
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"